[package]
name = "tessoku-book"
version = "0.1.0"
edition = "2021"

# dependencies added to new project
[dependencies]
proconio = "*"
itertools = "*"
superslice = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "a01"
path = "src/bin/a01.rs"

[[bin]]
name = "a02"
path = "src/bin/a02.rs"

[[bin]]
name = "a03"
path = "src/bin/a03.rs"

[[bin]]
name = "a04"
path = "src/bin/a04.rs"

[[bin]]
name = "a05"
path = "src/bin/a05.rs"

[[bin]]
name = "a06"
path = "src/bin/a06.rs"

[[bin]]
name = "a07"
path = "src/bin/a07.rs"

[[bin]]
name = "a08"
path = "src/bin/a08.rs"

[[bin]]
name = "a09"
path = "src/bin/a09.rs"

[[bin]]
name = "a12"
path = "src/bin/a12.rs"

[[bin]]
name = "a61"
path = "src/bin/a61.rs"

# B
[[bin]]
name = "b01"
path = "src/bin/b01.rs"

[[bin]]
name = "b02"
path = "src/bin/b02.rs"

[[bin]]
name = "b03"
path = "src/bin/b03.rs"

[[bin]]
name = "b04"
path = "src/bin/b04.rs"

[[bin]]
name = "b06"
path = "src/bin/b06.rs"

[[bin]]
name = "b07"
path = "src/bin/b07.rs"
